# skyrim-headless-mods

./: .gitignore  .helmcontext  CLAUDE.md  LICENSE  README.md
docs/: autofirebow-nexus-page.md  dbvo-page.md  findings-papyrus-limits.md  ghidra.md  ideas.md  nexus-api.md  oneclickmap-nexus-page.md  oneclicktravel-nexus-page.md  papyrus-limits.md  papyrus-toolchain.md  papyrus-workflow.md  skse-plugin-plan.md  skse-tier-bringup.md  skse-toolchain.md  toolchain.md  workflow.md
docs/plans/: autocastspell-design.md  autocastspell-plan.md  autofirebow-mcm-design.md  autofirebow-mcm-plan.md  autofirebow-real-charge-design.md  autofirebow-real-charge-handoff.md  autofirebow-real-charge-plan.md  dbvo-dialogue-tweaks-design.md  dbvo-dialogue-tweaks-plan.md  dbvo-mouth-snap-handoff.md  dbvo-v2-configurable-gap-design.md  dbvo-v2-configurable-gap-plan.md  dbvo-v3-player-voice-volume-design.md  dbvo-v3-player-voice-volume-plan.md  dbvo-v4-voice-cut-on-skip-design.md  dbvo-v5-reply-on-line-end-design.md  dbvo-v5-reply-on-line-end-plan.md  ghost-allies-design.md  ghost-allies-plan.md  ghost-allies-v2-plan.md  headless-skytest-merge-design.md  headless-skytest-merge-plan.md  oneclick-map-design.md  oneclick-map-handoff.md  oneclick-map-plan.md  oneclick-travel-design.md  oneclick-travel-plan.md  skytest-probe-design.md  skytest-probe-mcm-reveal-design.md  skytest-probe-mcm-reveal-plan.md  skytest-replay-design.md  skytest-replay-handoff.md  skytest-replay-plan.md  skytest-v2-handoff.md
headless/: .gitignore  README.md  drive.sh  launch.sh  ready.sh  shot.sh  stop.sh
headless/docs/: design.md  findings.md  status.md
headless/src/: eidriver.c
mods/AutoCastSpell/: CMakeLists.txt  README.md  build.sh
mods/AutoCastSpell/src/: main.cpp
mods/AutoFireBow/: CMakeLists.txt  README.md  build.sh
mods/AutoFireBow/src/: main.cpp
mods/AutoFireBow/src/papyrus/: AutoFireBow.psc  AutoFireBowMCM.psc
mods/DBVODialogueTweaks/: README.md  build.sh  package.sh
mods/DBVODialogueTweaks/media/: gen-timing-diagram.py
mods/DBVODialogueTweaks/plugin/: CMakeLists.txt
mods/DBVODialogueTweaks/plugin/src/: main.cpp
mods/DBVODialogueTweaks/src/__Packages/: DialogueMenu.as
mods/DBVODialogueTweaks/src/papyrus/: DBVODialogueTweaksMCM.psc  DBVOTweaks.psc
mods/DBVODialogueTweaks/stock/: dialoguemenu.swf
mods/DBVOResponseGap/: README.md
mods/GhostAllies/: README.md  build.sh  passthrough.steps
mods/GhostAllies/src/: main.cpp
mods/OneClickMap/: CMakeLists.txt  README.md  build.sh  package.sh
mods/OneClickMap/src/: main.cpp
mods/OneClickTravel/: CMakeLists.txt  README.md  build.sh  package.sh
mods/OneClickTravel/src/: main.cpp
mods/RapidBowHold/: README.md  build.sh
mods/RapidBowHold/src/: RapidBowHoldScript.psc
mods/SkytestProbe/: CMakeLists.txt  README.md  build.sh
mods/SkytestProbe/src/: actor_setup.cpp  actor_setup.h  commands.cpp  commands.h  config.h  console_exec.cpp  console_exec.h  dump_actor.cpp  dump_actor.h  engine.cpp  engine.h  facegen.cpp  facegen.h  facegen_ramp.cpp  facegen_ramp.h  hotkey.cpp  hotkey.h  main.cpp  mcm.cpp  mcm.h  probes.cpp  probes.h  resolve.cpp  resolve.h  trace.cpp  trace.h  worldstate.cpp  worldstate.h
plugins/: cross-env.sh
plugins/AutoFireBow/: build.sh
plugins/AutoFireBow/src/: main.cpp
plugins/GhostAllies/: CMakeLists.txt  build.sh
plugins/GhostAllies/src/: main.cpp
plugins/OneClickMap/: CMakeLists.txt  build.sh
plugins/OneClickMap/src/: main.cpp
plugins/RapidBow/: CMakeLists.txt  build.sh
plugins/RapidBow/src/: main.cpp
plugins/cmake/: clang-cl-msvc.cmake
skytest/: README.md  skytest
skytest/base-skse/: SkytestProbe.ini.template  po3_StartOnSave.ini.template
skytest/docs/: headless-findings.md
skytest/eidriver/: build.sh  eidriver.c
skytest/examples/: format-demo.steps
skytest/lib/: gamescope.sh  replay.sh  replay.test.sh
tools/: compile-papyrus.sh  env.sh  nexus  nexus.env.example
tools/BsaExtract/: BsaExtract.csproj  Program.cs
tools/EspGen/: Program.cs
tools/ghidra/: ghidra.sh
tools/ghidra/scripts/: PreLean.java  decompile_at.py  dump_updateimpl.py  facegen_apply.py  find_via_rtti.py  xref_to.py
tools/papyrus-compiler/: README.md
tools/papyrus-sources/: README.md
tools/papyrus-sources/vanilla/: ObjectReference.psc
tools/skse/: cross-env.sh  setup-sdk-symlinks.sh
tools/skse/cmake/: clang-cl-msvc.cmake
